; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_zimg.c_setup_misc_packer.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_zimg.c_setup_misc_packer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_zimg_repack = type { i64, i32*, i64, i32, i32 }
%struct.mp_regular_imgfmt = type { i32, i32, i32, i32, i32, i32, i32 }

@IMGFMT_RGB30 = common dso_local global i64 0, align 8
@MP_COMPONENT_TYPE_UINT = common dso_local global i32 0, align 4
@packed_repack = common dso_local global i32 0, align 4
@pa_ccc10z2 = common dso_local global i32 0, align 4
@un_ccc10x2 = common dso_local global i32 0, align 4
@setup_misc_packer.c_order = internal global [3 x i32] [i32 3, i32 2, i32 1], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mp_zimg_repack*)* @setup_misc_packer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_misc_packer(%struct.mp_zimg_repack* %0) #0 {
  %2 = alloca %struct.mp_zimg_repack*, align 8
  %3 = alloca %struct.mp_regular_imgfmt, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mp_zimg_repack* %0, %struct.mp_zimg_repack** %2, align 8
  %6 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %7 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @IMGFMT_RGB30, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %63

11:                                               ; preds = %1
  %12 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 0
  store i32 2, i32* %12, align 4
  %13 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 1
  store i32 -6, i32* %13, align 4
  %14 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 2
  store i32 3, i32* %14, align 4
  %15 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 3
  store i32 1, i32* %15, align 4
  %16 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 4
  store i32 1, i32* %16, align 4
  %17 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 5
  store i32 1, i32* %17, align 4
  %18 = getelementptr inbounds %struct.mp_regular_imgfmt, %struct.mp_regular_imgfmt* %3, i32 0, i32 6
  %19 = load i32, i32* @MP_COMPONENT_TYPE_UINT, align 4
  store i32 %19, i32* %18, align 4
  %20 = call i32 @mp_find_regular_imgfmt(%struct.mp_regular_imgfmt* %3)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %11
  br label %63

24:                                               ; preds = %11
  %25 = load i32, i32* %4, align 4
  %26 = sext i32 %25 to i64
  %27 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %28 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = load i32, i32* @packed_repack, align 4
  %30 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %31 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %30, i32 0, i32 4
  store i32 %29, i32* %31, align 4
  %32 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %33 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %32, i32 0, i32 2
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %24
  %37 = load i32, i32* @pa_ccc10z2, align 4
  br label %40

38:                                               ; preds = %24
  %39 = load i32, i32* @un_ccc10x2, align 4
  br label %40

40:                                               ; preds = %38, %36
  %41 = phi i32 [ %37, %36 ], [ %39, %38 ]
  %42 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %43 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %42, i32 0, i32 3
  store i32 %41, i32* %43, align 8
  store i32 0, i32* %5, align 4
  br label %44

44:                                               ; preds = %59, %40
  %45 = load i32, i32* %5, align 4
  %46 = icmp slt i32 %45, 3
  br i1 %46, label %47, label %62

47:                                               ; preds = %44
  %48 = load i32, i32* %5, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds [3 x i32], [3 x i32]* @setup_misc_packer.c_order, i64 0, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = sub nsw i32 %51, 1
  %53 = load %struct.mp_zimg_repack*, %struct.mp_zimg_repack** %2, align 8
  %54 = getelementptr inbounds %struct.mp_zimg_repack, %struct.mp_zimg_repack* %53, i32 0, i32 1
  %55 = load i32*, i32** %54, align 8
  %56 = load i32, i32* %5, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  store i32 %52, i32* %58, align 4
  br label %59

59:                                               ; preds = %47
  %60 = load i32, i32* %5, align 4
  %61 = add nsw i32 %60, 1
  store i32 %61, i32* %5, align 4
  br label %44

62:                                               ; preds = %44
  br label %63

63:                                               ; preds = %23, %62, %1
  ret void
}

declare dso_local i32 @mp_find_regular_imgfmt(%struct.mp_regular_imgfmt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
